--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "node-sass": "^4.8.3",
     "postcss": "^6.0.21",
     "postcss-loader": "^2.1.3",
+    "prismjs": "^1.14.0",
     "sass-loader": "^6.0.7",
     "style-loader": "^0.20.3",
     "uikit": "^3.0.0-beta.40",
