--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "rails-erb-loader": "^5.4.2",
     "sass-loader": "^6.0.7",
     "style-loader": "^0.20.3",
-    "uikit": "^3.0.0-beta.40",
+    "uikit": "^3.0.0-Rc.6",
     "webpack": "^4.3.0",
     "webpack-cli": "^2.0.13"
   }
